--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
+    <div class="location">
+      <h1 class="location-timezone">Timezone</h1>
+      <p>Icon</p>
+    </div>
+    <div class="temperature">
+      <h2 class="temperature-degree">34</h2>
+      <div class="temperature-description">It's friggin cold</div>
+    </div>
+    
     <script src='./app.js'></script>
   </body>
 </html>
