--- a/index.html
+++ b/index.html
@@ -12,10 +12,13 @@
       <p>Icon</p>
     </div>
     <div class="temperature">
-      <h2 class="temperature-degree">34</h2>
+      <div class="degree-section">
+        <h2 class="temperature-degree">34</h2>
+        <span>F</span>
+      </div>
       <div class="temperature-description">It's friggin cold</div>
     </div>
-    
+
     <script src='./app.js'></script>
   </body>
 </html>
