--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="temperature">
       <div class="degree-section">
         <h2 class="temperature-degree">34</h2>
-        <span>F</span>
+        <span>C</span>
       </div>
       <div class="temperature-description">It's friggin cold</div>
     </div>
